# codequest

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pr_checks.yml
tests/: test_greeting.py
utils/: greeting.py
