[tool.poetry]
name = "codequest"
version = "0.1.0"
description = "Coding examples and excercises."
authors = ["Zile Rehman <rehmanz@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.36.0"
pre-commit = "^4.0.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
